Update pipeline.yml for Azure Pipelines

--- a/deploy/pipeline.yml
+++ b/deploy/pipeline.yml
@@ -59,7 +59,7 @@ steps:
 - task: CopyFiles@2
   inputs:
     sourceFolder: '$(Build.SourcesDirectory)/dist'
-    contents: '*' 
+    contents: '**' 
     targetFolder: $(Build.ArtifactStagingDirectory)/npm/dist/
   displayName: 'Copy Build'
   
