Update pipeline.yml for Azure Pipelines

--- a/deploy/pipeline.yml
+++ b/deploy/pipeline.yml
@@ -27,27 +27,19 @@ steps:
     versionSpec: '12.x'
   displayName: 'Install Node.js'
 
-- script: |
-    git config --global user.email "alejandro.iglesias@trifenix.io"
-    git config --global user.name "alejandro.iglesias"    
-    git clone https://ale:tztflymo4joqivpd7yj2jqzwekko3owafvhqtzpbk5xxgzkcaqxa@dev.azure.com/Trifenix-Agricola-JHM/Components/_git/component-semantic-styled temp
-    cd temp    
-    git checkout master
-    npm version patch    
-    git add *;
-    git commit -m "update package.json version"
-    git push origin master
-    cd .. 
-    cp -rf temp/package.json package.json
-    cat package.json
-  displayName: 'Update version'
+
 
 - script: |        
     npm install    
   displayName: 'npm install packages'
 
+- script: |        
+    npm version patch
+  displayName: 'version patch'
+
 - script: |    
-    npm run build    
+    npm run build
+        
   displayName: 'npm build packages'
 
 - script: |
