--- a/package.json
+++ b/package.json
@@ -21,14 +21,14 @@
     "eslint-config-prettier": "^6.7.0",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-react": "^7.16.0",
-    
     "prepend-file": "^1.3.1",
     "prettier": "^1.19.1",
     "rollup": "^1.27.5",
     "rollup-plugin-typescript2": "^0.25.2",
     "ts-node": "^8.5.2",
     "tslib": "^1.10.0",
-    "typescript": "^3.7.2"
+    "typescript": "^3.7.2",
+    "install-peers-cli": "2.2.0"
   },
   "peerDependencies": {
     "react": "^16.12.0",
