--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
     "rollup-plugin-typescript2": "^0.25.2",
     "ts-node": "^8.5.2",
     "tslib": "^1.10.0",
-    "typescript": "^3.7.2",
-    "install-peers-cli": "2.2.0"
+    "typescript": "^3.7.2"
   },
   "peerDependencies": {
     "react": "^16.12.0",
@@ -41,7 +40,6 @@
     "build": "rollup -c",
     "build-watch": "rollup -c -w",
     "prepublishOnly": "npm run build",
-    "postinstall": "install-peers -f",
     "dev": "concurrently --kill-others \"npm run build-watch\" \"npm run start-example\"",
     "test": "ts-node test/test.ts",
     "pretest": "npm run build",
