--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "tfsearch-components",
+  "name": "fenix-components",
+  "description": "Componentes conectables de todo tipo",
   "version": "1.0.0",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
