--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "test": "ts-node test/test.ts",
     "pretest": "npm run build",
     "test:lint": "eslint ./src/**/*.ts ./src/**/*.tsx ./example/src/**/*.ts ./example/src/**/*.tsx",
-    "test:lint:fix": "npm run test:lint -- --fix"
+    "test:lint:fix": "npm run test:lint -- --fix",
+    "refreshVSToken": "vsts-npm-auth -config .npmrc"
   },
   "files": [
     "dist"
