replace token added

--- a/deploy/pipeline.yml
+++ b/deploy/pipeline.yml
@@ -7,6 +7,16 @@ pool:
   vmImage: "ubuntu-latest"
 
 steps:
+  - task: replacetokens@3
+    inputs:
+      targetFiles: 'deploy/.nprc'
+      encoding: 'auto'
+      writeBOM: true
+      actionOnMissing: 'warn'
+      keepToken: false
+      tokenPrefix: '#{'
+      tokenSuffix: '}#'
+
   - task: NodeTool@0
     inputs:
       versionSpec: "12.x"
