Update pipeline.yml for Azure Pipelines

--- a/deploy/pipeline.yml
+++ b/deploy/pipeline.yml
@@ -9,7 +9,7 @@ pool:
 steps:
   - task: replacetokens@3
     inputs:
-      targetFiles: 'deploy/.nprc'
+      targetFiles: '**/deploy/.nprc'
       encoding: 'auto'
       writeBOM: true
       actionOnMissing: 'warn'
