Update pipeline.yml for Azure Pipelines

--- a/deploy/pipeline.yml
+++ b/deploy/pipeline.yml
@@ -7,15 +7,19 @@ pool:
   vmImage: "ubuntu-latest"
 
 steps:
+
+
+        
   - task: replacetokens@3
     inputs:
-      targetFiles: '**/deploy/.nprc'
+      targetFiles: '**/config.npmrc'
       encoding: 'auto'
       writeBOM: true
       actionOnMissing: 'warn'
       keepToken: false
       tokenPrefix: '#{'
       tokenSuffix: '}#'
+    displayName: 'reemplazando configuración'
 
   - task: NodeTool@0
     inputs:
