--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,3 @@
-registry=https://pkgs.dev.azure.com/Trifenix-Agricola-JHM/Components/_packaging/fenix-components%40Release/npm/registry/
+registry=https://pkgs.dev.azure.com/Trifenix-Agricola-JHM/Components/_packaging/fenix-components%40Local/npm/registry/
 
 always-auth=true
