GitVersion integracion continua
Porque:
- El versionamiento ahora es manual
- No existe un orden en las versiones.
- facilita el seguimiento y control.

Al incorporar GitVersion en la integracion continua, conjunto con git Flow mejora toda la gestión de versiones de manera automática

--- a/deploy/pipeline.yml
+++ b/deploy/pipeline.yml
@@ -2,15 +2,34 @@ trigger:
   branches:
     include:
       - master
+      - develop
+      - release/*
+      - hotfix/*
 
 pool:
   vmImage: "ubuntu-latest"
 
 steps:
+  - task: UseGitVersion@5
+    inputs:
+      versionSpec: "5.x"
+      includePrerelease: true
+      useConfigFile: true
+      configFilePath: "deploy/gitConfig.yml"
+
   - task: NodeTool@0
     inputs:
       versionSpec: "12.x"
     displayName: "Install Node.js"
+
+  - task: Npm@1
+    inputs:
+      command: "custom"
+      customCommand: "--no-git-tag-version version $(GitVersion.MajorMinorPatch)$(GitVersion.PreReleaseTagWithDash)"
+
+  - task: CmdLine@2
+    inputs:
+      script: "cat package.json"
 
   - task: CopyFiles@2
     inputs:
