--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fenix-components",
-  "description": "Componentes conectables de todo tipo",
+  "description": "Componentes sin conexion a datos",
   "version": "1.1.6",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
