update @fenix .npmrc

--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,2 @@
-registry=https://pkgs.dev.azure.com/yo-fenix/_packaging/yo-fenix/npm/registry/
-
+@fenix:registry=https://pkgs.dev.azure.com/yo-fenix/_packaging/yo-fenix/npm/registry/
 always-auth=true
