--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "ts-node": "^8.5.2",
     "tslib": "^1.10.0",
     "typescript": "^3.7.2",
-    "tf-search-model": "^1.5.1"
+    "@fenix/tf-search-model": "^1.6.0-alpha.35.build.67"
   },
   "peerDependencies": {
     "react": "^16.12.0",
