--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
   "dependencies": {
     "@fenix/tf-search-model": "^1.6.0-alpha.34.build.63",
     "@types/lodash": "^4.14.149",
-    "lodash": "^4.17.15"
+    "lodash": "^4.17.15",
+    "moment": "^2.25.3"
   }
 }
