--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
   "license": "MIT",
   "types": "dist/index.d.ts",
   "devDependencies": {
+    "@fenix/tf-search-model": "file:../model-agro",
     "@types/react": "^16.9.13",
     "@types/react-dom": "^16.9.4",
     "@types/styled-components": "^4.4.0",
     "@typescript-eslint/eslint-plugin": "^2.9.0",
     "@typescript-eslint/parser": "^2.9.0",
-    "semantic-ui-react": "^0.88.2",
     "concurrently": "^5.0.0",
     "eslint": "^6.7.1",
     "eslint-config-prettier": "^6.7.0",
@@ -22,10 +22,10 @@
     "prettier": "^1.19.1",
     "rollup": "^1.27.5",
     "rollup-plugin-typescript2": "^0.25.2",
+    "semantic-ui-react": "^0.88.2",
     "ts-node": "^8.5.2",
     "tslib": "^1.10.0",
-    "typescript": "^3.7.2",
-    "@fenix/tf-search-model": "^1.6.0-alpha.35.build.67"
+    "typescript": "^3.7.2"
   },
   "peerDependencies": {
     "react": "^16.12.0",
@@ -49,7 +49,6 @@
     "dist"
   ],
   "dependencies": {
-    "@fenix/tf-search-model": "^1.6.0-alpha.34.build.63",
     "@types/lodash": "^4.14.149",
     "lodash": "^4.17.15",
     "moment": "^2.25.3"
