--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "types": "dist/index.d.ts",
   "devDependencies": {
-    "@fenix/tf-search-model": "file:../model-agro",
+    "@fenix/tf-search-model": "^1.6.0-alpha.44.build.86",
     "@types/react": "^16.9.13",
     "@types/react-dom": "^16.9.4",
     "@types/styled-components": "^4.4.0",
