actualizado a trifenix mdm 2021

--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,2 @@
-@fenix:registry=https://pkgs.dev.azure.com/yo-fenix/_packaging/yo-fenix/npm/registry/
+@trifenix:registry=https://pkgs.dev.azure.com/trifenix-connect/_packaging/trifenix/npm/registry/
 always-auth=true
