--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@fenix/fenix-components", 
+  "name": "@fenix/fenix-components",
   "description": "Componentes sin conexion a datos",
   "version": "0.0.5",
   "main": "dist/index.cjs.js",
@@ -7,7 +7,7 @@
   "license": "MIT",
   "types": "dist/index.d.ts",
   "devDependencies": {
-    "@fenix/tf-search-model": "^1.6.0-alpha.44.build.86",
+    "@trifenix/mdm": "^1.6.18",
     "@types/react": "^16.9.13",
     "@types/react-dom": "^16.9.4",
     "@types/styled-components": "^4.4.0",
@@ -25,7 +25,7 @@
     "semantic-ui-react": "^0.88.2",
     "ts-node": "^8.5.2",
     "tslib": "^1.10.0",
-    "typescript": "^3.7.2"
+    "typescript": "^4.1.3"
   },
   "peerDependencies": {
     "react": "^16.12.0",
