--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@fenix/fenix-components",
-  "description": "Componentes sin conexion a datos",
+  "name": "@trifenix/table-fenix",
+  "description": "Componente tabla para conexión con trifenix connect",
   "version": "0.0.5",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
@@ -27,6 +27,15 @@
     "tslib": "^1.10.0",
     "typescript": "^4.1.3"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/trifenix/old-fenix-component/"
+  },
+  "keywords": [
+    "trifenix",
+    "connect"
+  ],
+
   "peerDependencies": {
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
