--- a/deploy/gitConfig.yml
+++ b/deploy/gitConfig.yml
@@ -1,6 +1,7 @@
-branches:
-  master:
-    increment: Patch
+
 mode: ContinuousDelivery
+next-version: 0.1.1
 ignore:
   sha: []
+  commits-before: 2020-01-21T00:00:00
+
