--- a/deploy/production.yml
+++ b/deploy/production.yml
@@ -16,7 +16,7 @@ pr: none
 steps:
   - task: gitversion/setup@0
     inputs:
-      versionSpec: '5.6.4'
+      versionSpec: '5.x'
       includePrerelease: false
     displayName : "Configurando gitversion"
 
