--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,2 @@
-@trifenix:registry=https://pkgs.dev.azure.com/trifenix-connect/_packaging/trifenix/npm/registry/
-always-auth=true
+@trifenix:registry=https://registry.npmjs.org
+always-auth=false
